--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
       "bespoke-progress": "npm:bespoke-progress@^1.0.0",
       "bespoke-scale": "npm:bespoke-scale@^1.0.1",
       "bespoke-touch": "npm:bespoke-touch@^1.0.0",
+      "clean-css": "npm:clean-css@^3.3.7",
       "css": "github:systemjs/plugin-css@^0.1.13",
       "prism": "github:PrismJS/prism@^1.0.1"
     },
